@@ -10,6 +10,10 @@ Akismet.panel.Home = function(config) {
             html: '<h2>' + _('akismet') + '</h2>',
             cls: 'modx-page-header'
         },{
+            layout: 'column',
+            defaults: { border: false, autoHeight: true },
+            items: this.getStats(config)
+        },{
             xtype: 'modx-panel',
             defaults: { border: false, autoHeight: true },
             items: [{
@@ -29,5 +33,47 @@ Akismet.panel.Home = function(config) {
     });
     Akismet.panel.Home.superclass.constructor.call(this,config);
 };
-Ext.extend(Akismet.panel.Home, MODx.Panel);
+Ext.extend(Akismet.panel.Home, MODx.Panel, {
+    getStats: function (config) {
+        var stats = [];
+
+        stats.push({
+            width: 250,
+            cls: "main-wrapper",
+            defaults: {autoHeight: true},
+            items: [{
+                html: "<span class='akismet-home-stat'>" + Akismet.stats.spam + "</span>",
+            }, {
+                html: "<span class='akismet-home-statlabel'>" + _('akismet.spam_blocked') + "</span>",
+            }],
+            layout: "anchor"
+        });
+
+        stats.push({
+            width: 250,
+            cls: "main-wrapper",
+            defaults: {autoHeight: true},
+            items: [{
+                html: "<span class='akismet-home-stat'>" + Akismet.stats.ham + "</span>",
+            }, {
+                html: "<span class='akismet-home-statlabel'>" + _('akismet.real_messages') + "</span>",
+            }],
+            layout: "anchor"
+        });
+
+        stats.push({
+            width: 250,
+            cls: "main-wrapper",
+            defaults: {autoHeight: true},
+            items: [{
+                html: "<span class='akismet-home-stat'>" + Akismet.stats.spam_rate + "</span>",
+            }, {
+                html: "<span class='akismet-home-statlabel'>" + _('akismet.spam_percentage') + "</span>",
+            }],
+            layout: "anchor"
+        });
+
+        return stats;
+    }
+});
 Ext.reg('akismet-panel-home', Akismet.panel.Home);
