@@ -1,3 +1,5 @@
+- Track total spam/real messages and spam percentage, and show in component
+
 Akismet 1.1.0-pl
 ---------------------------------
 Released on 2021-09-16
